recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {
  if(list.tail==Nil){
    return list.head;
  }
  return last(l.tail);
}